--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #?????? ?? ??
-server.port = 80
+server.port = 8080
 
 #MySQL ?? ??
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -16,7 +16,7 @@ spring.jpa.properties.hibernate.format_sql=true
 #??? ???? ???? ??? ???? ??
 logging.level.org.hibernate.type.descriptor.sql=trace
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 #Live Reload ?? ???
@@ -36,3 +36,8 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 #?? batch size ??
 #spring.jpa.properties.hibernate.default_batch_fetch_size=1000
+
+# oauth2 소셜 로그인
+spring.security.oauth2.client.registration.google.client-id=460461522858-1jc10907kv212e7qvgkuvagmgomhjhfo.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.scope = profile, email
