--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,43 +1,30 @@
-#?????? ?? ??
-server.port = 8080
-
-#MySQL ?? ??
+# Server port
+server.port=8080
+#MySQL
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/bidking?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=ssafy
-
-#???? ?? ?? ??
+# JPA
 spring.jpa.properties.hibernate.show_sql=true
-
-#???? ???? ??? ???? ?? ???
 spring.jpa.properties.hibernate.format_sql=true
-
-#??? ???? ???? ??? ???? ??
 logging.level.org.hibernate.type.descriptor.sql=trace
-
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-
-#Live Reload ?? ???
-#spring.devtools.livereload.enabled=true
-
-#Thymeleaf cache ?? ??
+# 404 에러 처리
+spring.mvc.throw-exception-if-no-handler-found=true
+#Live Reload
+spring.devtools.livereload.enabled=true
+spring.web.resources.add-mappings=false
+#Thymeleaf cache
 #spring.thymeleaf.cache = false
-
-#?? ? ?? ?? ???
+# File
 #spring.servlet.multipart.maxFileSize=20MB
-#??? ?? ?? ??
 #spring.servlet.multipart.maxRequestSize=100MB
-#?? ??? ??? ??
 #itemImgLocation=C:/bidking/item
-#??? ??? ??
 #uploadPath=file:///C:/bidking/
-
-#?? batch size ??
 #spring.jpa.properties.hibernate.default_batch_fetch_size=1000
-
 # oauth2 소셜 로그인
 spring.security.oauth2.client.registration.google.client-id=460461522858-1jc10907kv212e7qvgkuvagmgomhjhfo.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=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
-spring.security.oauth2.client.registration.google.scope = profile, email
+spring.security.oauth2.client.registration.google.scope=profile, email
