--- a/client/.gitignore
+++ b/client/.gitignore
@@ -31,3 +31,10 @@ yarn-error.log*
 !.yarn/sdks
 !.yarn/versions
 .yarn/install-state.gz
+
+# dotenv environment variable files
+.env
+.env.development.local
+.env.test.local
+.env.production.local
+.env.local
