--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -34,3 +34,15 @@ spring.devtools.livereload.enabled = true
 spring.security.oauth2.client.registration.google.client-id = 460461522858-1jc10907kv212e7qvgkuvagmgomhjhfo.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret = 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
 spring.security.oauth2.client.registration.google.scope = profile, email
+
+# multipart 설정
+spring.servlet.multipart.max-file-size: 100MB
+spring.servlet.multipart.max-request-size: 100MB
+
+# aws 설정
+cloud.aws.s3.bucket=demo-userdata-ec2-ehdgus
+cloud.aws.credentials.access-key=AKIA2KX7A3C6ZEUQWYRE
+cloud.aws.credentials.secret-key=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
+cloud.aws.region.static=ap-northeast-2
+cloud.aws.region.auto=false
+cloud.aws.stack.auto=false
