--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -41,8 +41,8 @@ spring.servlet.multipart.max-request-size: 100MB
 
 # aws 설정
 cloud.aws.s3.bucket=demo-userdata-ec2-ehdgus
-cloud.aws.credentials.access-key=AKIA2KX7A3C6ZEUQWYRE
-cloud.aws.credentials.secret-key=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
+cloud.aws.credentials.access-key=${properties.file.access-key}
+cloud.aws.credentials.secret-key=${properties.file.secret-key}
 cloud.aws.region.static=ap-northeast-2
 cloud.aws.region.auto=false
 cloud.aws.stack.auto=false
