Chore: Separate file size from properties

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -36,8 +36,8 @@ spring.security.oauth2.client.registration.google.client-secret = GOCSPX-HlB4l5B
 spring.security.oauth2.client.registration.google.scope = profile, email
 
 # multipart 설정
-spring.servlet.multipart.max-file-size: 100MB
-spring.servlet.multipart.max-request-size: 100MB
+spring.servlet.multipart.max-file-size: ${properties.file.size}
+spring.servlet.multipart.max-request-size: ${properties.file.size}
 
 # aws 설정
 cloud.aws.s3.bucket=demo-userdata-ec2-ehdgus
