--- a/server/build.gradle
+++ b/server/build.gradle
@@ -32,8 +32,8 @@ dependencies {
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'com.h2database:h2'
 	runtimeOnly 'com.mysql:mysql-connector-j'
+	implementation group: 'net.nurigo', name: 'javaSDK', version: '2.2'
 	annotationProcessor 'org.projectlombok:lombok'
-
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
