--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@types/redux-persist": "^4.3.1",
     "axios": "^1.4.0",
     "emotion-normalize": "^11.0.1",
+    "openvidu-browser": "^2.28.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
