Feat: Add openvidu session

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,5 +1,10 @@
 # Server port
-server.port = 8080
+server.port = 5000
+server.ssl.enabled: true
+server.ssl.key-store: classpath:openvidu-selfsigned.jks
+server.ssl.key-store-password: openvidu
+server.ssl.key-store-type: JKS
+server.ssl.key-alias: openvidu-selfsigned
 
 #MySQL
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
@@ -21,20 +26,6 @@ spring.web.resources.add-mappings = false
 #Live Reload
 spring.devtools.livereload.enabled = true
 
-#Thymeleaf cache
-#spring.thymeleaf.cache = false
-# File
-#spring.servlet.multipart.maxFileSize=20MB
-#spring.servlet.multipart.maxRequestSize=100MB
-#itemImgLocation=C:/bidking/item
-#uploadPath=file:///C:/bidking/
-#spring.jpa.properties.hibernate.default_batch_fetch_size=1000
-
-# oauth2 소셜 로그인
-spring.security.oauth2.client.registration.google.client-id = 460461522858-1jc10907kv212e7qvgkuvagmgomhjhfo.apps.googleusercontent.com
-spring.security.oauth2.client.registration.google.client-secret = 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
-spring.security.oauth2.client.registration.google.scope = profile, email
-
 # multipart 설정
 spring.servlet.multipart.max-file-size: ${properties.file.size}
 spring.servlet.multipart.max-request-size: ${properties.file.size}
@@ -46,3 +37,8 @@ cloud.aws.credentials.secret-key=${properties.file.secret-key}
 cloud.aws.region.static=ap-northeast-2
 cloud.aws.region.auto=false
 cloud.aws.stack.auto=false
+
+# openvidu
+openvidu.url: http://localhost:4443/
+openvidu.secret: MY_SECRET
+openvidu.publicurl: local
