Revert "Merge branch 'feat/be/fix-properties' into 'master'"
This reverts merge request !72

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 # Server port
 server.port = 5000
-#server.ssl.enabled = true
-#server.ssl.key-store = classpath:openvidu-selfsigned.jks
-#server.ssl.key-store-password = openvidu
-#server.ssl.key-store-typ = JKS
-#server.ssl.key-alias = openvidu-selfsigned
+server.ssl.enabled: true
+server.ssl.key-store: classpath:openvidu-selfsigned.jks
+server.ssl.key-store-password: openvidu
+server.ssl.key-store-type: JKS
+server.ssl.key-alias: openvidu-selfsigned
 
 #MySQL
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
@@ -39,6 +39,6 @@ cloud.aws.region.auto=false
 cloud.aws.stack.auto=false
 
 # openvidu
-#openvidu.url = http://localhost:4443/
-#openvidu.secret = MY_SECRET
-#openvidu.publicurl = local
+openvidu.url: http://localhost:4443/
+openvidu.secret: MY_SECRET
+openvidu.publicurl: local
