Feat: Add redis config

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -42,3 +42,8 @@ cloud.aws.stack.auto=false
 #openvidu.url: http://localhost:4443/
 #openvidu.secret: MY_SECRET
 #openvidu.publicurl: local
+
+#redis
+spring.redis.host=127.17.0.1
+spring.redis.port=6379
+spring.redis.timeout=3000
