--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -44,6 +44,6 @@ cloud.aws.stack.auto=false
 #openvidu.publicurl: local
 
 #redis
-spring.redis.host=127.17.0.1
+spring.redis.host=localhost
 spring.redis.port=6379
 spring.redis.timeout=3000
