Feat: Build stage

--- a/server/Jenkinsfile
+++ b/server/Jenkinsfile
@@ -2,9 +2,10 @@ pipeline {
     agent any
 
     stages {
-        stage('Hello') {
+        stage('Build') {
             steps {
-                echo 'Hello World'
+                echo 'springboot server build start...'
+                sh './gradlew clean build'
             }
         }
     }
