Test: Gradle clean test

--- a/server/Jenkinsfile
+++ b/server/Jenkinsfile
@@ -1,11 +1,26 @@
 pipeline {
     agent any
-
+  
     stages {
-        stage('Build') {
+        stage('Test') {
             steps {
-                echo 'springboot server build start...'
-                sh './gradlew clean build'
+                bat "gradle clean test"
+            }
+  
+            post {                
+                // If Gradle was able to run the tests, even if some of the test
+                // failed, record the test results and archive the jar file.
+                success {
+                   publishHTML([
+                      allowMissing: false, 
+                      alwaysLinkToLastBuild: false, 
+                      keepAll: false, 
+                      reportDir: 'lib/target/site/bidking/', 
+                      reportFiles: 'index.html', 
+                      reportName: 'bidking springboot Report', 
+                      reportTitles: '', 
+                      useWrapperFileDirectly: true])
+                }
             }
         }
     }
