Fix: Changing permission of gradlew, Linux shell script

--- a/server/Jenkinsfile
+++ b/server/Jenkinsfile
@@ -4,7 +4,7 @@ pipeline {
     stages {
         stage('Test') {
             steps {
-                bat "gradle clean test"
+                sh "gradle clean test"
             }
   
             post {                
