Fix: Change Gradle to Gradlew

--- a/server/Jenkinsfile
+++ b/server/Jenkinsfile
@@ -4,7 +4,7 @@ pipeline {
     stages {
         stage('Test') {
             steps {
-                sh "gradle clean test"
+                sh "./gradlew clean test"
             }
   
             post {                
