Fix: Add working directory

--- a/server/Jenkinsfile
+++ b/server/Jenkinsfile
@@ -5,36 +5,37 @@ pipeline {
         stage('Prepare') {
             steps {
                 echo 'Checking current file list...'
-                sh 'cd server && ls'
+                sh 'ls server'
                 echo 'Preparing the environment...'
-                sh 'chmod +x ./gradlew'
+                sh 'chmod +x ./server/gradlew'
             }
         }
         stage('Test') {
             steps {
-                sh "./gradlew clean test"
+                dir('server') {
+                    sh './gradlew clean test'
+                }
             }
-
             post {
-                // If Gradle was able to run the tests, even if some of the test
-                // failed, record the test results and archive the jar file.
                 success {
-                   publishHTML([
-                      allowMissing: false,
-                      alwaysLinkToLastBuild: false,
-                      keepAll: false,
-                      reportDir: 'lib/target/site/bidking/',
-                      reportFiles: 'index.html',
-                      reportName: 'bidking springboot Report',
-                      reportTitles: '',
-                      useWrapperFileDirectly: true])
+                    publishHTML([
+                        allowMissing: false,
+                        alwaysLinkToLastBuild: false,
+                        keepAll: false,
+                        reportDir: 'server/lib/target/site/bidking/',
+                        reportFiles: 'index.html',
+                        reportName: 'bidking springboot Report',
+                        reportTitles: '',
+                        useWrapperFileDirectly: true])
                 }
             }
         }
         stage('Build') {
             steps {
-                echo 'Building the project...'
-                sh './gradlew clean build'
+                dir('server') {
+                    echo 'Building the project...'
+                    sh './gradlew clean build'
+                }
             }
         }
     }
