--- a/client/Jenkinsfile
+++ b/client/Jenkinsfile
@@ -2,9 +2,13 @@ pipeline {
     agent any
 
     stages {
-        stage('Hello') {
+        stage('Build') {
             steps {
-                echo 'Hello World'
+                dir('client') {
+                    echo 'Building the project...'
+                    sh 'npm install -g yarn'
+                    sh 'yarn build'
+                }
             }
         }
     }
