Refactor: Delete global option

--- a/client/Jenkinsfile
+++ b/client/Jenkinsfile
@@ -5,9 +5,9 @@ pipeline {
         stage('Build') {
             steps {
                 dir('client') {
-                    echo 'Building the project...'
-                    sh 'npm install -g yarn'
-                    sh 'yarn build'
+                    echo "Building the project..."
+                    sh "npm install yarn"
+                    sh "yarn build"
                 }
             }
         }
