--- a/socket-server/package.json
+++ b/socket-server/package.json
@@ -21,6 +21,7 @@
     "cross-env": "^7.0.3",
     "csurf": "^1.11.0",
     "dotenv": "^16.3.1",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "helmet": "^7.0.0",
