--- a/client/package.json
+++ b/client/package.json
@@ -5,8 +5,9 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@reduxjs/toolkit": "^1.9.5",
-    "@types/redux-persist": "^4.3.1",
+    "add": "^2.0.6",
     "axios": "^1.4.0",
+    "dotenv": "^16.3.1",
     "emotion-normalize": "^11.0.1",
     "openvidu-browser": "^2.28.0",
     "react": "^18.2.0",
@@ -17,7 +18,9 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
-    "typescript": "^4.9.5"
+    "socket.io-client": "^4.7.2",
+    "typescript": "^4.9.5",
+    "yarn": "^1.22.19"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -73,6 +76,8 @@
     "@types/react-dom": "^18.2.6",
     "@types/react-redux": "^7.1.25",
     "@types/react-router-dom": "^5.3.3",
+    "@types/redux-persist": "^4.3.1",
+    "@types/socket.io-client": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "latest",
     "@typescript-eslint/parser": "latest",
     "babel-plugin-named-exports-order": "^0.0.2",
