--- a/socket-server/package.json
+++ b/socket-server/package.json
@@ -29,6 +29,7 @@
     "hpp": "^0.2.3",
     "morgan": "^1.10.0",
     "pm2": "^5.3.0",
+    "redis": "^4.6.7",
     "sanitize-html": "^2.11.0",
     "socket.io": "^4.7.1"
   },
