--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -3,9 +3,9 @@ server.port = 5000
 
 #MySQL
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
-spring.datasource.url = jdbc:mysql://localhost:3306/bidking?serverTimezone=UTC
-spring.datasource.username = root
-spring.datasource.password = ssafy
+spring.datasource.url = ${db_url}
+spring.datasource.username = ${db_username}
+spring.datasource.password = ${db_password}
 
 # JPA
 spring.jpa.properties.hibernate.show_sql = true
@@ -22,13 +22,13 @@ spring.web.resources.add-mappings = false
 spring.devtools.livereload.enabled = true
 
 # multipart 설정
-spring.servlet.multipart.max-file-size: ${properties.file.size}
-spring.servlet.multipart.max-request-size: ${properties.file.size}
+spring.servlet.multipart.max-file-size : ${properties.file.size}
+spring.servlet.multipart.max-request-size : ${properties.file.size}
 
 # aws 설정
-cloud.aws.s3.bucket=demo-userdata-ec2-ehdgus
-cloud.aws.credentials.access-key=${properties.file.access-key}
-cloud.aws.credentials.secret-key=${properties.file.secret-key}
-cloud.aws.region.static=ap-northeast-2
-cloud.aws.region.auto=false
-cloud.aws.stack.auto=false
+cloud.aws.s3.bucket = demo-userdata-ec2-ehdgus
+cloud.aws.credentials.access-key = ${properties.file.access-key}
+cloud.aws.credentials.secret-key = ${properties.file.secret-key}
+cloud.aws.region.static = ap-northeast-2
+cloud.aws.region.auto = false
+cloud.aws.stack.auto = false
