Revert "Merge branch 'feat/be/Fix-auctionBookmark' into 'develop'"
This reverts merge request !155

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -3,9 +3,9 @@ server.port = 5000
 
 #MySQL
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
-spring.datasource.url = jdbc:mysql://localhost:3306/bidking?serverTimezone=UTC
-spring.datasource.username = root
-spring.datasource.password = ssafy
+spring.datasource.url = ${db_url}
+spring.datasource.username = ${db_username}
+spring.datasource.password = ${db_password}
 
 # JPA
 spring.jpa.properties.hibernate.show_sql = true
