--- a/server/build.gradle
+++ b/server/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group = 'com.widzard'
-version = '0.0.1-SNAPSHOT'
+version = '0.0.1'
 
 java {
 	sourceCompatibility = '11'
@@ -54,4 +54,10 @@ dependencies {
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+// build.gradle
+
+jar {
+	enabled = false
 }
