--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,9 +1,10 @@
-FROM node:alpine as builder
-WORKDIR /app
-COPY ./ ./
-RUN yarn build
-
 FROM nginx
 EXPOSE 3000
+
+# 기존 빌드 파일 삭제
+RUN rm -rf /usr/share/nginx/html/*
+
 COPY ./nginx/default.conf /etc/nginx/conf.d/default.conf
-COPY --from=builder /app/build  /usr/share/nginx/html
+COPY ./build /usr/share/nginx/html
+
+CMD [ "nginx", "-g", "daemon off;" ]
