--- a/client/nginx/default.conf
+++ b/client/nginx/default.conf
@@ -1,5 +1,6 @@
 server {
     listen 3000;
+    server_name localhost;
 
     location / {
 
@@ -8,6 +9,5 @@ server {
         index index.html index.htm;
 
         try_files $uri  $uri/ /index.html;
-
     }
 }
