--- a/socket-server/Dockerfile
+++ b/socket-server/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:18.17.0-alpine
+FROM node:18-alpine
 
 WORKDIR /app
 
@@ -7,5 +7,7 @@ COPY ./package.json ./
 RUN npm install
 
 COPY . .
+
+EXPOSE 8005
 
 CMD ["npm", "run", "dev"]
