--- a/socket-server/package.json
+++ b/socket-server/package.json
@@ -30,7 +30,8 @@
     "morgan": "^1.10.0",
     "pm2": "^5.3.0",
     "sanitize-html": "^2.11.0",
-    "socket.io": "^4.7.1"
+    "socket.io": "^4.7.1",
+    "redis": "3.0.2" 
   },
   "devDependencies": {
     "@babel/preset-env": "^7.22.9",
