Refactor: Change config

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,9 +23,13 @@ services:
       - "5000:5000"
 
   redis-server:
-    image: redis
+    image: dajeongyun/docker-redis
+    build: 
+      context: ./redis
+      dockerfile: Dockerfile
     volumes:
-      - redis-data:/data
+      # - redis-data:/data
+      - ./redis:/data
     ports:
       - "16379:6379"
       
@@ -42,5 +46,5 @@ services:
     ports:
       - "8005:8005"
 
-volumes:
-  redis-data:
+# volumes:
+#   redis-data:
