--- a/client/nginx/default.conf
+++ b/client/nginx/default.conf
@@ -1,13 +1,13 @@
 server {
-    listen 3000;
-    server_name localhost;
+     listen 3000;
+     server_name localhost;
 
-    location / {
+     location / {
 
-        root /app/build;
+         root /usr/share/nginx/html;
 
-        index index.html index.htm;
+         index index.html index.htm;
 
-        try_files $uri  $uri/ /index.html;
-    }
-}
+         try_files $uri  $uri/ /index.html;
+     }
+ }
