--- a/server/build.gradle
+++ b/server/build.gradle
@@ -49,7 +49,8 @@ dependencies {
 	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.1'
 
 
-
+	// redis
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 	// slf4j API
 	testCompileOnly 'org.projectlombok:lombok'
 	testAnnotationProcessor 'org.projectlombok:lombok'
