Fix: Redis connection

--- a/socket-server/Dockerfile
+++ b/socket-server/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:18
+FROM node:18-alpine
 
 WORKDIR /app
 
@@ -6,8 +6,8 @@ COPY ./package.json ./
 
 RUN npm install
 
-COPY . .
+COPY ./ ./
+
+CMD ["npm", "run", "dev"]
 
 EXPOSE 8005
-
-CMD ["npm", "run", "start"]
