--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -2,7 +2,13 @@
 server.port = 5000
 
 #MySQL
-spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
+# 개발 서버
+# spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
+# spring.datasource.url = jdbc:mysql://localhost:3306/bidking?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+# spring.datasource.username = root
+# spring.datasource.password = ssafy
+
+# 운영 환경
 spring.datasource.url = ${db_url}
 spring.datasource.username = ${db_username}
 spring.datasource.password = ${db_password}
@@ -32,3 +38,8 @@ cloud.aws.credentials.secret-key = ${properties.file.secret-key}
 cloud.aws.region.static = ap-northeast-2
 cloud.aws.region.auto = false
 cloud.aws.stack.auto = false
+
+# SSL
+# server.ssl.key-store=classpath:keystore.p12
+# server.ssl.key-store-type= ${ssl_type}
+# server.ssl.key-store-password= ${ssl_password}
