--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port = 5000
 
 #MySQL
 # 개발 서버
-# spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
+ spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 # spring.datasource.url = jdbc:mysql://localhost:3306/bidking?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
 # spring.datasource.username = root
 # spring.datasource.password = ssafy
