Feat: Redis Config

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -39,7 +39,13 @@ cloud.aws.region.static = ap-northeast-2
 cloud.aws.region.auto = false
 cloud.aws.stack.auto = false
 
+# redis
+spring.redis.host = localhost
+spring.redis.port = 6379
+
+
 # SSL
 # server.ssl.key-store=classpath:keystore.p12
 # server.ssl.key-store-type= ${ssl_type}
 # server.ssl.key-store-password= ${ssl_password}
+
