--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -42,7 +42,7 @@ cloud.aws.stack.auto = false
 # redis
 spring.redis.host = localhost
 spring.redis.port = 6379
-
+spring.autoconfigure.exclude = org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
 
 # SSL
 # server.ssl.key-store=classpath:keystore.p12
