--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -40,7 +40,7 @@ cloud.aws.region.auto = false
 cloud.aws.stack.auto = false
 
 # redis
-spring.redis.host = localhost
+spring.redis.host = redis
 spring.redis.port = 6379
 spring.autoconfigure.exclude = org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
 
