--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -3,10 +3,10 @@ server.port = 5000
 
 #MySQL
 # 개발 서버
-#  spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
-#  spring.datasource.url = jdbc:mysql://localhost:3306/bidking?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
-#  spring.datasource.username = root
-#  spring.datasource.password = ssafy
+#spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
+#spring.datasource.url = jdbc:mysql://localhost:3306/bidking?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+#spring.datasource.username = root
+#spring.datasource.password = ssafy
 
 # 운영 환경
 spring.datasource.url = ${db_url}
@@ -40,7 +40,7 @@ cloud.aws.region.auto = false
 cloud.aws.stack.auto = false
 
 # redis
-spring.redis.host = redis
+spring.redis.host = localhost
 spring.redis.port = 6379
 spring.autoconfigure.exclude = org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
 
