Refactor: SSL & DTO Update

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,4 +1,4 @@
-# Build Stage
+# 운영환경 도커파일 
 FROM node:18-alpine as builder
 WORKDIR /app
 RUN apk update && apk add --no-cache yarn
@@ -6,7 +6,6 @@ COPY ./ ./
 RUN yarn
 RUN yarn build
 
-# Production Stage
 FROM nginx
 EXPOSE 3000
 COPY ./nginx/default.conf /etc/nginx/conf.d/default.conf
