--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,5 +1,9 @@
 # Server port
 server.port = 5000
+server.ssl.enabled = true
+server.ssl.key-store = classpath:ssl/keystore.p12
+server.ssl.key-store-type = ${ssl_type}
+server.ssl.key-store-password = ${ssl_password}
 
 #MySQL
 # 개발 서버
@@ -43,8 +47,3 @@ cloud.aws.stack.auto = false
 spring.redis.host = redis
 spring.redis.port = 6379
 spring.autoconfigure.exclude = org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
-
-# SSL
-# server.ssl.key-store=classpath:keystore.p12
-# server.ssl.key-store-type= ${ssl_type}
-# server.ssl.key-store-password= ${ssl_password}
