--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,21 +1,21 @@
 # Server port
 server.port = 5000
-server.ssl.enabled = true
-server.ssl.key-store = classpath:ssl/keystore.p12
-server.ssl.key-store-type = ${ssl_type}
-server.ssl.key-store-password = ${ssl_password}
+#server.ssl.enabled = true
+#server.ssl.key-store = classpath:ssl/keystore.p12
+#server.ssl.key-store-type = ${ssl_type}
+#server.ssl.key-store-password = ${ssl_password}
 
 #MySQL
 # 개발 서버
-#  spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
-#  spring.datasource.url = jdbc:mysql://localhost:3306/bidking?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
-#  spring.datasource.username = root
-#  spring.datasource.password = ssafy
+  spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
+  spring.datasource.url = jdbc:mysql://localhost:3306/bidking?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+  spring.datasource.username = root
+  spring.datasource.password = ssafy
 
 # 운영 환경
-spring.datasource.url = ${db_url}
-spring.datasource.username = ${db_username}
-spring.datasource.password = ${db_password}
+#spring.datasource.url = ${db_url}
+#spring.datasource.username = ${db_username}
+#spring.datasource.password = ${db_password}
 
 # JPA
 spring.jpa.properties.hibernate.show_sql = true
@@ -44,6 +44,6 @@ cloud.aws.region.auto = false
 cloud.aws.stack.auto = false
 
 # redis
-spring.redis.host = redis
+spring.redis.host = localhost
 spring.redis.port = 6379
 spring.autoconfigure.exclude = org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
