--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -21,7 +21,7 @@ spring.datasource.password = ${db_password}
 spring.jpa.properties.hibernate.show_sql = true
 spring.jpa.properties.hibernate.format_sql = true
 logging.level.org.hibernate.type.descriptor.sql = trace
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto = none
 spring.jpa.database-platform = org.hibernate.dialect.MySQL8Dialect
 
 # 404 에러 처리
