--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -44,6 +44,7 @@ cloud.aws.region.auto = false
 cloud.aws.stack.auto = false
 
 # redis
-spring.redis.host = redis
-spring.redis.port = 6379
+spring.data.redis.host = redis
+spring.data.redis.port = 6379
+spring.data.redis.password = 0613
 spring.autoconfigure.exclude = org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
