chore: 프로퍼티 설정 업데이트

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,18 +1,8 @@
 # Server port
-server.port = 5000
-server.ssl.enabled = true
-server.ssl.key-store = classpath:ssl/keystore.p12
-server.ssl.key-store-type = ${ssl_type}
-server.ssl.key-store-password = ${ssl_password}
+server.port = 8080
 
-#MySQL
-# 개발 서버
-# spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
-# spring.datasource.url = jdbc:mysql://localhost:3306/bidking?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
-# spring.datasource.username = root
-# spring.datasource.password = ssafy
-
-# 운영 환경
+# MySQL
+spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 spring.datasource.url = ${db_url}
 spring.datasource.username = ${db_username}
 spring.datasource.password = ${db_password}
@@ -20,8 +10,10 @@ spring.datasource.password = ${db_password}
 # JPA
 spring.jpa.properties.hibernate.show_sql = true
 spring.jpa.properties.hibernate.format_sql = true
+spring.jpa.properties.hibernate.highlight_sql = true
+spring.jpa.properties.hibernate.use_sql_comments = true
 logging.level.org.hibernate.type.descriptor.sql = trace
-spring.jpa.hibernate.ddl-auto = none
+spring.jpa.hibernate.ddl-auto = create-drop
 spring.jpa.database-platform = org.hibernate.dialect.MySQL8Dialect
 
 # 404 에러 처리
@@ -44,7 +36,7 @@ cloud.aws.region.auto = false
 cloud.aws.stack.auto = false
 
 # redis
-spring.data.redis.host = redis
-spring.data.redis.port = 6379
-spring.data.redis.password = 0613
+spring.data.redis.host = ${redis_host}
+spring.data.redis.port = ${redis_port}
+spring.data.redis.password = ${redis_password}
 spring.autoconfigure.exclude = org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
