--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -28,7 +28,7 @@ spring.servlet.multipart.max-file-size : ${properties.file.size}
 spring.servlet.multipart.max-request-size : ${properties.file.size}
 
 # aws 설정
-cloud.aws.s3.bucket = demo-userdata-ec2-ehdgus
+cloud.aws.s3.bucket = bidking
 cloud.aws.credentials.access-key = ${properties.file.access-key}
 cloud.aws.credentials.secret-key = ${properties.file.secret-key}
 cloud.aws.region.static = ap-northeast-2
